--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+/bin
+/target
+/lib
+/classes
+/checkouts
 pom.xml
-*jar
-/lib/
-/classes/
-/targets/
+*.jar
+*.class
 .lein-deps-sum
+.lein-failures
+.lein-plugins
+.settings
+.classpath
+.project
